fix: adjust sobre nos section photo on mobile

--- a/assets/css/sobre copy.css
+++ b/assets/css/sobre copy.css
@@ -217,11 +217,19 @@
 
 /* Responsividade para dispositivos móveis */
 @media (max-width: 768px) {
-
   .img-team img {
   width: 100%;
   height: 50rem;
   object-fit: cover;
   margin-top: 5rem;
   }
+  .img-team {
+    width: 100%;
+    height: auto;
+}
+
+.img-team img {
+    width: 100%;
+    height: auto;
+}
 }
